--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -1,1 +1,4 @@
 TMS.TO_WITH_PKEY_NOT_FOUND=No TransportOrder with persisted key [{0}] found
+TMS.TO_STATE_CHANGE_NULL_STATE=New TransportOrder's state may not be NULL. Persisted key of the TransportOrder [{0}]
+TMS.TO_STATE_CHANGE_BACKWARDS_NOT_ALLOWED=Turning back the state of the TransportOrder with persisted key [{0}] is not allowed
+TMS.TO_STATE_CHANGE_NOT_READY=A new TransportOrder must first be INITIALIZED or can be CANCELED. Persisted key of the TransportOrder [{0}]
