--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,10 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
             </plugin>
-            <plugin>
+            <!--plugin>
                 <groupId>com.github.github</groupId>
                 <artifactId>site-maven-plugin</artifactId>
-            </plugin>
+            </plugin-->
         </plugins>
     </build>
 
