--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -4,3 +4,4 @@ TMS.TO_STATE_CHANGE_BACKWARDS_NOT_ALLOWED=Turning back the state of the Transpor
 TMS.TO_STATE_CHANGE_NOT_READY=A new TransportOrder must first be INITIALIZED or may get CANCELED but cannot be turned into [{0}]. Persisted key of the TransportOrder [{1}]
 TMS.START_TO_NOT_ALLOWED_ALREADY_STARTED_ONE=A started TransportOrder with Barcode [{0}] already exists, hence the TransportOrder with persisted key [{1}] cannot be started
 TMS.STATE_CHANGE_ERROR_FOR_INITIALIZED_TO=An initialized TransportOrder may only be set to STARTED, CANCELED or ONFAILURE. Persisted key of the TransportOrder [{0}]
+TMS.TARGET_BLOCKED=The LocationGroup or Location to redirect the TransportOrder to is blocked and is not accepted as a target. Target [{0}], persisted key of the TransportOrder [{1}]
