--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.tms</artifactId>
         <version>1.1.0-SNAPSHOT</version>
+        <relativePath />
     </parent>
     <artifactId>org.openwms.tms.transportation</artifactId>
     <name>${project.artifactId}</name>
@@ -37,19 +38,20 @@
     </properties>
 
     <build>
+        <finalName>openwms-tms-transportation</finalName>
         <plugins>
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>aspectj-maven-plugin</artifactId>
             </plugin>
-            <!--plugin>
-                <groupId>com.github.github</groupId>
-                <artifactId>site-maven-plugin</artifactId>
-            </plugin-->
         </plugins>
     </build>
 
@@ -83,6 +85,10 @@
         </dependency>
 
         <!-- Spring Framework -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -165,5 +171,16 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Snapshot Repository</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 
 </project>
