--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -21,6 +21,8 @@ eureka:
     serviceUrl:
       # need to be overridden in the cloud environment props!
       defaultZone: ${owms.eureka.url}/eureka
+    healthcheck:
+      enabled: true
   instance:
     hostname: openwms-tms-transportation.herokuapp.com
     # need to be overridden in the cloud environment props!
