--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,8 +1,8 @@
 spring:
-  main:
-    banner-mode: off
   application:
     name: tms-service
+  main:
+    banner-mode: OFF
   cloud:
     config:
       label: ${owms.tenant:master}
@@ -13,8 +13,18 @@ spring:
 #      username: ${owms.config.username:user}
 #      password: ${owms.config.password:sa}
 
+owms:
+  eureka:
+    # Override this in cloud environment!
+    url: http://user:sa@localhost:8761
+
 server:
   port: ${PORT:8083}
+
+security:
+  user:
+    # Override this in cloud environment!
+    password: sa
 
 eureka:
   client:
@@ -24,32 +34,18 @@ eureka:
     healthcheck:
       enabled: true
   instance:
+    secure-port-enabled: false
+    non-secure-port-enabled: true
+
+---
+spring:
+  profiles: CLOUD
+
+eureka:
+  instance:
     hostname: openwms-tms-transportation.herokuapp.com
-    # need to be overridden in the cloud environment props!
     secure-port-enabled: true
     non-secure-port-enabled: false
     statusPageUrl: https://${eureka.instance.hostName}/info
     healthCheckUrl: https://${eureka.instance.hostName}/health
     homePageUrl: https://${eureka.instance.hostName}/
-
----
-spring:
-  profiles: DEV
-
-owms:
-  eureka:
-    url: http://user:sa@localhost:8761
-
-eureka:
-  instance:
-    hostname: localhost
-    secure-port-enabled: false
-    non-secure-port-enabled: true
-    non-secure-port: ${server.port}
-    statusPageUrl: http://${eureka.instance.hostName}/info
-    healthCheckUrl: http://${eureka.instance.hostName}/health
-    homePageUrl: http://${eureka.instance.hostName}/
-
-security:
-  user:
-    password: sa
