created routes and actions

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -12,6 +12,13 @@ spring:
         service-id: openwms-config
 #      username: ${owms.config.username:user}
 #      password: ${owms.config.password:sa}
+  h2:
+    console:
+      enabled: true
+      settings:
+        web-allow-others: true
+  jpa:
+    generate-ddl: true
 
 owms:
   eureka:
@@ -38,6 +45,7 @@ eureka:
       # need to be overridden in the cloud environment props!
       username: user
       password: ${security.user.password}
+      protocol: http
 
 ---
 spring:
@@ -51,3 +59,5 @@ eureka:
     statusPageUrl: https://${eureka.instance.hostName}/info
     healthCheckUrl: https://${eureka.instance.hostName}/health
     homePageUrl: https://${eureka.instance.hostName}/
+    metadata-map:
+      protocol: https
