--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: tms-service
   main:
-    banner-mode: OFF
+    banner-mode: "OFF"
   cloud:
     config:
       label: ${owms.tenant:master}
