--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,36 @@
     </parent>
     <artifactId>org.openwms.tms.transportation</artifactId>
     <name>OpenWMS.org TMS: Transportation Services</name>
+
     <properties>
         <moduleDir>../..</moduleDir>
         <sonar.projectKey>OpenWMS.org_TMS:TransportationServices</sonar.projectKey>
+        <distribution.serverUrl.rootPath>interface21.io/docs/</distribution.serverUrl.rootPath>
     </properties>
+
+    <distributionManagement>
+        <repository>
+            <id>sonatype-nexus-staging</id>
+            <name>OpenWMS.org Release Repository</name>
+            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+        </repository>
+        <snapshotRepository>
+            <id>sonatype-nexus-staging</id>
+            <name>OpenWMS.org Snapshot Repository</name>
+            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <site>
+            <id>${distribution.serverId}</id>
+            <name>OpenWMS.org WebSite</name>
+            <url>scp://${distribution.serverUrl.rootPath}/tms/routing</url>
+        </site>
+    </distributionManagement>
+
+    <scm>
+        <url>https://github.com/openwms/org.openwms.tms.transportation</url>
+        <connection>scm:git:git://github.com/openwms/org.openwms.tms.transportation.git</connection>
+        <developerConnection>scm:git:git@github.com:openwms/org.openwms.tms.transportation.git</developerConnection>
+    </scm>
 
     <build>
         <finalName>openwms-tms-transportation</finalName>
