--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
         <site>
             <id>ftp-io</id>
             <name>OpenWMS.org WebSite</name>
-            <url>scp://${distribution.serverUrl.rootPath}/tms/routing</url>
+            <url>scp://${distribution.serverUrl.rootPath}/tms/transportation</url>
         </site>
     </distributionManagement>
 
