--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <relativePath/>
     </parent>
     <artifactId>org.openwms.tms.transportation</artifactId>
-    <name>TMS: Transportation Services</name>
+    <name>OpenWMS.org TMS: Transportation Services</name>
     <url>https://www.interface21.io/docs/tms/transportation/index.html</url>
 
     <properties>
