--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
 
     <ciManagement>
         <system>Jenkins</system>
-        <url>http://openwms.mooo.com/jenkins/job/org.openwms.tms.transportation</url>
+        <url>https://openwms.mooo.com/jenkins/job/org.openwms.tms.transportation</url>
         <notifiers>
             <notifier>
                 <type>mail</type>
