--- a/src/test/resources/bootstrap.yml
+++ b/src/test/resources/bootstrap.yml
@@ -2,3 +2,6 @@ owms:
   eureka:
     # Override this in cloud environment!
     url: http://user:sa@localhost:8761
+eureka:
+  server:
+    enable-self-preservation: false
