- added Dockerfile - added support for retry getting config

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
   cloud:
     config:
       label: ${owms.tenant:master}
-      fail-fast: true
+      fail-fast: true # true means retry
       discovery:
         enabled: true
         service-id: openwms-config
