--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -36,6 +36,8 @@ eureka:
     serviceUrl:
       # need to be overridden in the cloud environment props!
       defaultZone: ${owms.eureka.url}/eureka
+    healthcheck:
+      enabled: true
   instance:
     secure-port-enabled: false
     non-secure-port-enabled: true
