changed protocol for site upload

--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <site>
             <id>ftp-io</id>
             <name>OpenWMS.org WebSite</name>
-            <url>ftps://ftp.interface21.io/tms/transportation</url>
+            <url>ftp://ftp.interface21.io/tms/transportation</url>
         </site>
     </distributionManagement>
 
