docker build and push automatically

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
 - docker
 
 after_success:
-- docker build -t openwms/org.openwms.tms.transportation:$TRAVIS_BUILD_NUMBER .
+- docker build -t openwms/org.openwms.tms.transportation:latest .
 
 deploy:
   provider: script
