--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,6 @@
     <url>https://www.interface21.io/docs/tms/transportation/index.html</url>
 
     <properties>
-        <sonar.projectKey>OpenWMS.org_TMS:TransportationServices</sonar.projectKey>
         <core.version>1.1.0-SNAPSHOT</core.version>
         <common.version>1.1.0-SNAPSHOT</common.version>
     </properties>
@@ -46,12 +45,12 @@
         <repository>
             <id>sonatype-nexus-staging</id>
             <name>OpenWMS.org Release Repository</name>
-            <url>http://oss.sonatype.org/service/local/staging/deploy/maven2</url>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
         </repository>
         <snapshotRepository>
             <id>sonatype-nexus-staging</id>
             <name>OpenWMS.org Snapshot Repository</name>
-            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
         </snapshotRepository>
         <site>
             <id>ftp-io</id>
