--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <relativePath/>
     </parent>
     <artifactId>org.openwms.tms.transportation</artifactId>
+    <version>1.2.0-SNAPSHOT</version>
     <name>OpenWMS.org TMS: Transportation Services</name>
     <url>https://www.interface21.io/docs/tms/transportation/index.html</url>
 
