--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
 
 script:
   - sonar-scanner
-  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install deploy sonar:sonar
+  - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
 
 after_success:
   - docker build -t openwms/org.openwms.tms.transportation:latest .
