use of feign directly not in a wrapper nor in an adapter

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -32,7 +32,7 @@ eureka:
     non-secure-port-enabled: true
     metadata-map:
       # need to be overridden in the cloud environment props!
-      username: user
+      username: ${spring.security.user.name}
       password: ${spring.security.user.password}
       protocol: http
 
