--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
     <name>OpenWMS.org TMS: Transportation Services</name>
     <url>https://www.interface21.io/docs/tms/transportation/index.html</url>
 
+    <properties>
+        <ameba-lib.version>2.0-SNAPSHOT</ameba-lib.version>
+        <common-service.version>1.2.0-SNAPSHOT</common-service.version>
+        <core.version>1.3.0-SNAPSHOT</core.version>
+        <guava.version>19.0</guava.version>
+    </properties>
+
     <issueManagement>
         <system>github</system>
         <url>https://github.com/openwms/org.openwms.tms.transportation/issues</url>
@@ -73,11 +80,6 @@
             </notifier>
         </notifiers>
     </ciManagement>
-
-    <properties>
-        <core.version>1.3.0-SNAPSHOT</core.version>
-        <guava.version>19.0</guava.version>
-    </properties>
 
     <reporting>
         <plugins>
@@ -150,6 +152,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.openwms</groupId>
+                <artifactId>org.openwms.common.service</artifactId>
+                <version>${common-service.version}</version>
+                <classifier>client</classifier>
+            </dependency>
+            <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
@@ -179,11 +187,21 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>io.interface21</groupId>
+                <artifactId>ameba-lib</artifactId>
+                <version>${ameba-lib.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
         <!-- Project dependencies -->
+        <dependency>
+            <groupId>org.openwms</groupId>
+            <artifactId>org.openwms.common.service</artifactId>
+            <classifier>client</classifier>
+        </dependency>
 
         <!-- 3rd party dependencies -->
         <dependency>
