--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.openwms</groupId>
         <artifactId>org.openwms.parent</artifactId>
-        <version>5</version>
+        <version>6</version>
         <relativePath/>
     </parent>
     <artifactId>org.openwms.tms.transportation</artifactId>
@@ -15,9 +15,8 @@
     <url>https://www.interface21.io/docs/tms/transportation/index.html</url>
 
     <properties>
-        <ameba-lib.version>2.0-SNAPSHOT</ameba-lib.version>
-        <common-service.version>1.2.0-SNAPSHOT</common-service.version>
-        <core.version>1.3.0-SNAPSHOT</core.version>
+        <common-service.version>1.2.0</common-service.version>
+        <core.version>1.3.0</core.version>
         <guava.version>19.0</guava.version>
     </properties>
 
@@ -170,12 +169,6 @@
                 <scope>import</scope>
             </dependency>
             <dependency>
-                <groupId>org.openwms</groupId>
-                <artifactId>org.openwms.core.test</artifactId>
-                <version>${core.version}</version>
-                <type>test-jar</type>
-            </dependency>
-            <dependency>
                 <groupId>net.sf.dozer</groupId>
                 <artifactId>dozer</artifactId>
                 <version>${dozer.version}</version>
@@ -186,11 +179,6 @@
                         <artifactId>commons-collections</artifactId>
                     </exclusion>
                 </exclusions>
-            </dependency>
-            <dependency>
-                <groupId>io.interface21</groupId>
-                <artifactId>ameba-lib</artifactId>
-                <version>${ameba-lib.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -336,14 +324,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.restdocs</groupId>
-            <artifactId>spring-restdocs-mockmvc</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>org.openwms.core.test</artifactId>
-            <type>test-jar</type>
+            <groupId>org.springframework.restdocs</groupId>
+            <artifactId>spring-restdocs-mockmvc</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -361,11 +348,6 @@
                     <artifactId>asm</artifactId>
                 </exclusion>
             </exclusions>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
     </dependencies>
