Bug: Hystrix Javanica pulls in older version of Guava

--- a/pom.xml
+++ b/pom.xml
@@ -286,6 +286,11 @@
             <version>1.5.12</version>
             <exclusions>
                 <exclusion>
+                    <!-- Several versions of Guava used internally, exclude all -->
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+                <exclusion>
                     <!-- Take the newer patch from actuator -->
                     <groupId>org.hdrhistogram</groupId>
                     <artifactId>HdrHistogram</artifactId>
