#3 First implementation of exporter

--- a/src/test/resources/bootstrap.yml
+++ b/src/test/resources/bootstrap.yml
@@ -2,7 +2,8 @@ spring:
   security:
     user:
       password: sa
-
+  profiles:
+    active: SYNCHRONOUS
 owms:
   eureka:
     # Override this in cloud environment!
