--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <common-service.version>1.2.0</common-service.version>
         <core.version>1.3.0</core.version>
+        <feign-httpclient.version>9.5.1</feign-httpclient.version>
         <guava.version>19.0</guava.version>
     </properties>
 
@@ -157,6 +158,12 @@
                 <classifier>client</classifier>
             </dependency>
             <dependency>
+                <!-- Required to use PATCH -->
+                <groupId>io.github.openfeign</groupId>
+                <artifactId>feign-httpclient</artifactId>
+                <version>${feign-httpclient.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
@@ -196,6 +203,9 @@
             <groupId>io.interface21</groupId>
             <artifactId>ameba-lib</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-httpclient</artifactId></dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jdk8</artifactId>
