move back changeState function

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -11,8 +11,8 @@ spring:
         max-attempts: 120
   security:
     user:
-      # Override this in cloud environment!
       password: sa
+      name: user
 
 owms:
   eureka:
