#4 Fixed RemovalListener and refactoring

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,5 +19,8 @@ owms:
     common:
       tu:
         exchange-name: common.tu
+    tms:
+      to:
+        exchange-name: tms.events
   tms:
     block-tu-deletion-states:
