--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
                         <configuration>
                             <classifier>client</classifier>
                             <includes>
-                                <include>**/api/*.class</include>
+                                <include>**/api/**/*.class</include>
                             </includes>
                         </configuration>
                     </execution>
@@ -204,7 +204,8 @@
         </dependency>
         <dependency>
             <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-httpclient</artifactId></dependency>
+            <artifactId>feign-httpclient</artifactId>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jdk8</artifactId>
@@ -306,6 +307,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>5.3</version>
+            <scope>runtime</scope>
+        </dependency>
 
         <!-- both for retry -->
         <dependency>
@@ -317,6 +324,10 @@
             <artifactId>spring-retry</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-core</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
