Use inmem H2 database of not otherwise configured

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -13,7 +13,8 @@ spring:
     user:
       password: sa
       name: user
-
+  jpa:
+    database: h2
 owms:
   eureka:
     url: http://user:sa@localhost:8761
