#5 Only start a TransportOrder if all parties accept to start - Adopted build to common - Introduced JUnit 5 - The starter now asks whether a TO can be started or not. Requires asynchronous mode

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@ eureka:
   client:
     healthcheck:
       enabled: true
+owms:
+  tms:
+    block-tu-deletion-states:
 
 ---
 spring:
@@ -26,7 +29,11 @@ owms:
     tms:
       to:
         exchange-name: tms.events
-  tms:
-    block-tu-deletion-states:
+  requests:
+    tms:
+      to:
+        exchange-name: tms.requests
+        routing-key: response.state.change
+        queue-name: tms-to-requests
   transportation:
     serialization: json
