--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,6 @@
     <name>OpenWMS.org TMS: Transportation Services</name>
     <url>https://openwms.github.io/org.openwms.tms.transportation/index.html</url>
 
-    <properties>
-        <common-service.version>1.4.0-SNAPSHOT</common-service.version>
-    </properties>
-
     <issueManagement>
         <system>github</system>
         <url>https://github.com/openwms/org.openwms.tms.transportation/issues</url>
@@ -67,6 +63,12 @@
         </notifiers>
     </ciManagement>
 
+    <properties>
+        <common-service.version>1.4.0-SNAPSHOT</common-service.version>
+        <postgresql.version>42.2.5</postgresql.version> <!-- Keep in sync with Boot -->
+        <skipTests>false</skipTests>
+    </properties>
+
     <reporting>
         <plugins>
             <plugin>
@@ -93,6 +95,13 @@
             <plugin>
                 <groupId>org.asciidoctor</groupId>
                 <artifactId>asciidoctor-maven-plugin</artifactId>
+                <configuration>
+                    <skip>${skipTests}</skip>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>aspectj-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -107,13 +116,6 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>aspectj-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <artifactId>maven-resources-plugin</artifactId>
             </plugin>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -134,6 +136,79 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>schemagen</id>
+            <properties>
+                <schemaspy-maven-plugin.version>5.1.0</schemaspy-maven-plugin.version>
+            </properties>
+            <reporting>
+                <plugins>
+                    <plugin>
+                        <groupId>nl.geodienstencentrum.maven</groupId>
+                        <artifactId>schemaspy-maven-plugin</artifactId>
+                        <configuration>
+                            <databaseType>pgsql</databaseType>
+                            <database>testdb</database>
+                            <host>localhost</host>
+                            <port>5432</port>
+                            <user>karl</user>
+                            <schema>public</schema>
+                            <password>karl</password>
+                            <pathToDrivers>/home/travis/.m2/repository/org/postgresql/postgresql/${postgresql.version}/postgresql-${postgresql.version}.jar</pathToDrivers>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </reporting>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <artifactId>maven-surefire-report-plugin</artifactId>
+                            <version>${maven-surefire-report-plugin.version}</version>
+                            <configuration>
+                                <aggregate>false</aggregate>
+                            </configuration>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>org.postgresql</groupId>
+                                    <artifactId>postgresql</artifactId>
+                                    <version>${postgresql.version}</version>
+                                </dependency>
+                            </dependencies>
+                        </plugin>
+                        <plugin>
+                            <groupId>nl.geodienstencentrum.maven</groupId>
+                            <artifactId>schemaspy-maven-plugin</artifactId>
+                            <version>${schemaspy-maven-plugin.version}</version>
+                            <dependencies>
+                                <dependency>
+                                    <groupId>org.postgresql</groupId>
+                                    <artifactId>postgresql</artifactId>
+                                    <version>${postgresql.version}</version>
+                                </dependency>
+                            </dependencies>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
+                <plugins>
+                    <plugin>
+                        <groupId>nl.geodienstencentrum.maven</groupId>
+                        <artifactId>schemaspy-maven-plugin</artifactId>
+                        <version>${schemaspy-maven-plugin.version}</version>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.postgresql</groupId>
+                                <artifactId>postgresql</artifactId>
+                                <version>${postgresql.version}</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencyManagement>
         <dependencies>
@@ -282,7 +357,7 @@
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
+            <artifactId>logback-classic</artifactId>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
